<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center|top"
    android:background="@color/light_gray">

    <include android:id="@+id/top_line" layout="@layout/top_line"/>
    
    <EditText
        android:id="@+id/et_phone_number"
        android:layout_width="match_parent"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_height="55dp"
        android:hint="@string/请输入手机号"
        android:padding="16dp"
        android:digits="0123456789"
        android:maxLength="11"
        android:textCursorDrawable="@drawable/cursor_color"
        android:background="@drawable/edittext_selector"
        android:autofillHints="phone"
        android:inputType="phone" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="16dp"
        android:layout_height="55dp">
        <EditText
            android:id="@+id/ed_code"
            android:enabled="false"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="match_parent"
            android:hint="@string/请输入验证码"
            android:padding="16dp"
            android:digits="0123456789"
            android:maxLength="6"
            android:textCursorDrawable="@drawable/cursor_color"
            android:background="@drawable/edittext_selector"
            android:autofillHints=""
            android:inputType="number" />
        <TextView
            android:id="@+id/tv_code"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/获取验证码"
            android:textColor="@drawable/text_enable_selector"
            android:textSize="18sp"
            android:gravity="center"
            android:enabled="false"
            android:clickable="true"
            android:background="@drawable/edittext_background"/>
    </LinearLayout>
    <TextView
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/立即登录"
        android:textSize="20sp"
        android:textColor="@drawable/button_enable_selector"
        android:background="@drawable/button_selector"
        android:gravity="center"
        android:clickable="true"
        android:enabled="false"/>

</LinearLayout>